# mcu_Scaffolding

./: .gitignore  .gitmodules  .mxproject  README.md  build.sh  debug.md  f411ceu.code-workspace  f411ceu.ioc  待实现.txt
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
EWARM/: Project.eww  f411ceu.ewd  f411ceu.ewp
MDK-ARM/: f411ceu.uvguix.13109  f411ceu.uvoptx  f411ceu.uvprojx  startup_stm32f411xe.lst
MDK-ARM/RTE/_f411ceu/: RTE_Components.h
MDK-ARM/f411ceu/: cmsis_os2.crf  cmsis_os2.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  f411ceu.axf  f411ceu.build_log.htm  f411ceu.hex  f411ceu.htm  f411ceu.lnp  f411ceu.map  f411ceu_f411ceu.dep  freertos.crf  freertos.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  port.crf  port.d  queue.crf  queue.d  startup_stm32f411xe.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  (+30 more)
ThirdPartyDiff/: EasyLogger.diff
component/log/: CMakeLists.txt  readme.txt
component/log/include/: elog.h  elog_cfg.h  log.h
component/log/src/: elog_cfg.h  elog_port.c  log.c
component/memory/: CMakeLists.txt  memory_monitor.c
component/memory/include/: memory_monitor.h
component/public/: CMakeLists.txt  MEMORY_SECTIONS_README.md  PERIPH_INIT_README.md  compile.h  memory_sections.c  memory_sections_example.c  periph_init.c
component/public/include/: compile.h  esp_compiler.h  esp_err.h  hal.h  memory_sections.h  periph_init.h
component/rcc/: CMakeLists.txt
component/rcc/include/: rcc.h
component/rcc/src/: rcc.c
component/shell/: CMakeLists.txt  shell.c
component/shell/include/: shell.h
component/uart/: CMakeLists.txt  readme.txt  uart.c  uart_example.c
component/uart/include/: uart.h
component/worker/: CMakeLists.txt  worker.c  worker_example.c
component/worker/include/: worker.h
component/worker/test/: test_worker.c
doc/: CMAKE_OPTIMIZATION.md  COMPONENT_TESTING_GUIDE.md  GPIO_Modes_Explained.md  UART_HandleTypeDef_Analysis.md  VERSION_INFO_GUIDE.md  freertos_memory_analysis.md  linker.md
f103zet6_big/: .gdbinit  CMakeLists.txt  STM32F103XX_FLASH.ld  f103zet6.ioc  openocd.cfg
f103zet6_big/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
f103zet6_big/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
f103zet6_big/app_main/: CMakeLists.txt  app_main.c  version_info.c
f103zet6_big/app_main/include/: version_info.h
f103zet6_big/app_main_test/: CMakeLists.txt  app_main.c
f411ceu6_nano/: .mxproject  CMakeLists.txt  STM32F411XX_FLASH.ld  f411ceu6_nano.ioc
f411ceu6_nano/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
f411ceu6_nano/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
h743vit6_mini/: CMakeLists.txt  STM32H743XX_FLASH.ld  h743vit6_mini.ioc
h743vit6_mini/Core/Src/: main.c
h753_alitek/: CMakeLists.txt  STM32H753XX_FLASH.ld  h753_alitek.ioc
h753_alitek/Core/Inc/: main.h
h753_alitek/Core/Src/: main.c  stm32h7xx_hal_msp.c
tools/: README.md  serial_monitor.bat  serial_monitor.py
